--- a/index.html
+++ b/index.html
@@ -320,39 +320,39 @@
           </h3>
           <ul class="tech-stack-wrapper">
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/htmllogo.png" alt="Html skill" class="tech-stack-logo" />
+              <img src="htmllogo.png" alt="Html skill" class="tech-stack-logo" />
               <span class="tooltip">HTML</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/csslogo.png" alt="css skill" class="tech-stack-logo" />
+              <img src="csslogo.png" alt="css skill" class="tech-stack-logo" />
               <span class="tooltip">CSS</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/jslogo.png" alt="js skill" class="tech-stack-logo" />
+              <img src="jslogo.png" alt="js skill" class="tech-stack-logo" />
               <span class="tooltip">JS</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/bootstraplogo.png" alt="bootstrap skill" class="tech-stack-logo" />
+              <img src="bootstraplogo.png" alt="bootstrap skill" class="tech-stack-logo" />
               <span class="tooltip">BOOTSTRAP</span>
             </li>
 
            
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/githublogo.png" alt="github skill" class="tech-stack-logo needtobeinvert" />
+              <img src="githublogo.png" alt="github skill" class="tech-stack-logo needtobeinvert" />
               <span class="tooltip">GITHUB</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/gitlogo.png" alt="git skill" class="tech-stack-logo" />
+              <img src="gitlogo.png" alt="git skill" class="tech-stack-logo" />
               <span class="tooltip">GIT</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/clogo.png" alt="c language skill" class="tech-stack-logo" />
+              <img src="clogo.png" alt="c language skill" class="tech-stack-logo" />
               <span class="tooltip">C</span>
             </li>
 
@@ -370,7 +370,7 @@
            
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/canvalogo.png" alt="canva skill" class="tech-stack-logo" />
+              <img src="canvalogo.png" alt="canva skill" class="tech-stack-logo" />
               <span class="tooltip">CANVA</span>
             </li>
           </ul>
