--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#000" />
   <meta name="description"
-    content="Vinod Jangid | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Aditya Pichikala| Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
   <meta name="keywords"
-    content="vinod jangid,vinod jangid portfolio,Vinod Jangid Portfolio,vinodjangid,vinod jangid site,Vinod Jangid Site,vinod jangid me,vinod jangid web,vinod jangid github,vinodjangid site,vinodjangid uiverse,uiverse,vinod jangid uiverse,vinod jangid frontend developer,frontend developer,vinod jangid jaipur,vinod jaipur" />
-  <meta name="author" content="Vinod Jangid" />
+    content="Aditya pichikala,Aditya Pichikala portfolio,Aditya Pichikala Portfolio,adityapichikala,aditya pichikala site,Aditya Pichikala Site,adityapichikala me,adityapichikala web,aditya pichikala github,adityapichikala site,uiverse,adityapichikala uiverse,Aditya Pichikala frontend developer,frontend developer,Adityaa Pichikala" />
+  <meta name="author" content="Aditya Pichikala" />
   <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
-  <meta property="og:title" content="Vinod Jangid | Portfolio" />
+  <meta property="og:title" content="Aditya Pichikala| Portfolio" />
   <meta property="og:description"
-    content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Hi! My name is Aditya. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
 
   <meta property="og:url" content="https://vinodjangid.site" />
-  <meta property="og:site_name" content="Vinod Jangid Portfolio" />
+  <meta property="og:site_name" content="aditya pichikala Portfolio" />
 
   <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
   <meta name="twitter:site" content="@Portfolio" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Vinod Jangid | Portfolio" />
+  <meta name="twitter:title" content="Aditya Pichikala | Portfolio" />
   <title>Aditya Pichikala | Portfolio</title>
-  <link rel="icon" type="image/x-icon" href="src/png/main-favicon.png" />
+  <link rel="icon" type="image/x-icon" href="main-favicon.png" />
   <!-- aos cdn -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- stylesheet -->
@@ -399,7 +399,7 @@
                 <div class="project-buttons">
                   <a href="https://github.com/adityapichikala/disaster-relief-management" target="_blank" class="github-redirect"
                     aria-label="Visit Pexelicons on GitHub">
-                    <img src="src/svg/github.svg" alt="github redirect button" />
+                    <img src="github.svg" alt="github redirect button" />
                   </a>
                   <a href="https://adityapichikala.github.io/disaster-relief-management/" target="_blank" class="cta"
                     aria-label="Visit Pexelicons Live">
@@ -429,7 +429,7 @@
                 <div class="project-buttons">
                   <a href="https://github.com/adityapichikala/greenhouse-gas-emission?tab=readme-ov-file" target="_blank" class="github-redirect"
                     aria-label="Visit Pexelicons on GitHub">
-                    <img src="src/svg/github.svg" alt="github redirect button" />
+                    <img src="github.svg" alt="github redirect button" />
                   </a>
                   <a href="https://adityapichikala.github.io/greenhouse-gas-emission/" target="_blank" class="cta" aria-label="Visit Comickaze live">
                     <span>Live view</span>
@@ -460,7 +460,7 @@
                 <div class="project-buttons">
                   <a href="https://github.com/adityapichikala/bootcamp/blob/main/healthcareanalysis%20(1).ipynb" target="_blank" class="github-redirect"
                     aria-label="Visit Aquaregia on GitHub">
-                    <img src="src/svg/github.svg" alt="github redirect button" />
+                    <img src="github.svg" alt="github redirect button" />
                   </a>
                   <a href="https://github.com/adityapichikala/bootcamp/blob/main/healthcareanalysis%20(1).ipynb" target="_blank" class="cta"
                     aria-label="Visit Aquaregia Live">
